# pkg/common/modelHelper/cart.go
@@ -12,6 +12,9 @@ type DisplayCart struct {
 }
 
 type ViewCart struct {
-	CartItems []DisplayCart
-	CartTotal float64
+	CartItems []DisplayCart `json:"cart_items,omitempty"`
+	CouponID  int           `json:"coupon_id,omitempty"`
+	SubTotal  float64       `json:"sub_total"`
+	Discount  float64       `json:"discount"`
+	CartTotal float64       `json:"cart_total,omitempty"`
 }
